# Tape2PPI

./: .gitignore  CLAUDE.md  CMakeLists.txt  CONTEXT.md  eval_ppi.py  export_weights.py  train.py
export/: tape_to_ppi_converter.cpp  tape_to_ppi_converter.h  tcn_tape_to_ppi.cpp  tcn_tape_to_ppi.h  tcn_weights.h
ml_env/: cpc_model.pt
src/: batch_processor.cpp  batch_processor.h  block_analyzer.cpp  block_analyzer.h  conversion_validator.cpp  conversion_validator.h  dataset_exporter.cpp  dataset_exporter.h  dump_matcher.cpp  dump_matcher.h  main.cpp  protection_detector.cpp  protection_detector.h  signal_analyzer.cpp  signal_analyzer.h  signal_converter.cpp  signal_converter.h  source_detector.cpp  source_detector.h  wav_reader.cpp  wav_reader.h  wav_writer.cpp  wav_writer.h
tests/: test_tcn_inference.cpp
